--- a/EyesFollowCursor/eye.html
+++ b/EyesFollowCursor/eye.html
@@ -10,6 +10,15 @@
 </head>
 <body>
     <div class="mainBoard">
+        <div class="toggleChangeThemeMain">
+            <p class="darkThemeText">Dark</p>
+            <div class="toggleChangeTheme">
+                <input type="checkbox" class="toggleCheckBox">
+                <span class="toggle"></span>
+                <span class="makeMoon"></span>
+            </div>
+            <p class="lightThemeText">Light</p>
+        </div>
         <div class="timer">
             <div class="timeDate">
                 <span class="hoursTimer"></span>
@@ -41,9 +50,6 @@
                     <span class="bottom"></span>
                 </div>
             </div>
-        </div>
-        <div class="cursorCustom">
-            <img src="./cursor.png" class="cursorImg">
         </div>
     </div>
 </body>
